Iterations of mission and purpose statements.

--- a/docs/handbook/company/why-webiny-exists.mdx
+++ b/docs/handbook/company/why-webiny-exists.mdx
@@ -9,20 +9,23 @@ slug: why-webiny-exists
 
 **To set a standard for how online experiences are made, ensuring builders and creators are empowered by the tools they use.**
 
-The thing is, the web is a messy place. We've been building websites and applications for close to two decades now. Things are not getting much better. There's a lack of a standard, there's too much focus on the wrong things, like which library is better, which framework, which cloud, which UI, ... and so on. No one is looking at the whole experience end to end, and that's where things are falling apart. At the end of the day what developers want is not to need to suffer through their day fighting with the tools they use. They want to be able to focus on the things that matter, like building great experiences for their users.
+The web is a messy place. Webiny started as a digital web agency where we've been building websites and applications for close to two decades. Things are not getting much better when it comes to the overall experience for both developers as well as content creators.
 
-On the other side, we have the content creators, the ones that use the tools that the developers produce. They are also in a tough spot. They need the tools to support them and not work against them. The tools must work, always, they must be fast and they must be secure. They must be able to create the experiences they want, not the ones that the tools allow them to create.
+There's a lack of a standard, there's too much focus on the wrong things, like which library is better, which framework, which cloud, which UI, ... and so on. No one is looking at the whole experience end to end, and that's where things are falling apart. At the end of the day what developers want is not to need to suffer through their day fighting with the tools they use. They want to be able to focus on the things that matter, like building great experiences for their users.
 
-By being in such a place, having a vertigo effect of the amount of frustrations we felt on both the developer as well as the content creator experience, we decided to do something about it. We decided to build Webiny.
+On the other side, we have the content creators, the ones that use the tools that the developers produce. They are also in a tough spot. They need the tools to support them and not work against them. The tools must work, always, they must be fast and they must be secure. They must be able to create the experiences they want, not just the ones that the tools allow them to create.
+
+By being in such a place, having a vertigo effect of the amount of frustrations we felt on both the developer as well as the content creator side, we decided to do something about it.
 
 The purpose we aim to fulfill is one of allowing developers to focus on building great experiences without fighting the tools they use. And for content creators to enjoy their work by using the tools that enrich their creativity and not limit it. 
 
 
 ## Our Mission 
 
-**Offer a platform with an exceptional experience for the creation of exceptional online experiences.**
+**Provide an open platform that empowers builders and creators to craft amazing online experiences. No matter the scale, always secure and reliable.**
 
-To fulfill our purpose, our mission is an ambitious one. It's not enough for us to provide just another library, another framework, an infrastructure solution, or a ready-made product. It won't work. Many tried that approach before and failed. 
+
+To fulfill our purpose, our mission is an ambitious one. It's not enough for us to provide just another library, another framework, an infrastructure solution, or a ready-made application. It won't work. Many tried that approach before and failed. 
 
 We need to provide a platform. A platform that is open, that is ultra-customizable, that is rooted in the first principles, and that respects the data ownership of the users. A platform that contains many ready-made applications, but that are composable. A platform where you can customize every single part of it in a maintainable way. Operating on an infrastructure type that is most reliable, scalable, secure, performs well under large workloads and comes at a low cost. 
 
@@ -46,7 +49,7 @@ We believe that developer experience is the most important aspect of any softwar
 
 It's one thing to have an open-source license and another thing to architect your product with open-source values in mind. Integration, customization and interoperability are all dependent on having a great developer experience and a product that can be molded to fit their needs.
 
-When we build any new feature at Webiny, we don't think about the feature as just a thing that needs to do a specific task, instead, we put great effort into also thinking about how someone might want to change the default behavior and build customizations on top of it, and then we build the required API so all of that becomes possible.
+When we build any new feature at Webiny, we don't think about the feature as just a thing that needs to do a specific task, instead, we put great effort into also thinking about how someone might want to change the default behavior and build customizations on top of it, and then we build the required API, hooks, events and plugins so all of that becomes possible. And not just possible, it's not an afterthought, it's there from the start.
 
 ### Rooted in the first principles
 
