fix: background tasks query and code fetch single task

--- a/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/background-task-management.mdx
+++ b/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/background-task-management.mdx
@@ -4,6 +4,8 @@ title: Background Task Management
 description: You will learn about Background Tasks, how to create new definitions, how to trigger them and how to handle the task run.
 ---
 
+
+
 import {Alert} from "@/components/Alert";
 import {CanIUseThis} from "@/components/CanIUseThis";
 import {WhatYouWillLearn} from "@/components/WhatYouWillLearn";
@@ -80,6 +82,40 @@ query ListTasks {
   }
 }
 ```
+
+#### Fetch a Single Background Task Run
+
+```graphql
+query FetchTask {
+  backgroundTasks {
+    getTask(id: "yourTaskId") {
+      data {
+        id
+        startedOn
+        finishedOn
+        name
+        definitionId
+        iterations
+        parentId
+        executionName
+        eventResponse
+        taskStatus
+        input
+        output
+        # ...more fields available
+      }
+      error {
+        message
+        code
+        data
+        stack
+      }
+    }
+  }
+}
+```
+
+Of course, replace the `yourTaskId` with the actual ID of the task you want to fetch.
 
 #### List Background Task Logs
 
@@ -194,6 +230,14 @@ const results = await context.tasks.listTasks({
     after: null
 });
 ```
+
+### Fetch a Single Background Task Run
+
+```typescript
+const task = await context.tasks.getTask("yourTaskId");
+```
+
+Of course, replace the `yourTaskId` with the actual ID of the task you want to fetch.
 
 ### Trigger a Background Task
 
