fix: improve description of the global object

--- a/docs/developer-docs/5.38.x/core-development-concepts/extending-and-customizing/lexical-tools.mdx
+++ b/docs/developer-docs/5.38.x/core-development-concepts/extending-and-customizing/lexical-tools.mdx
@@ -132,7 +132,7 @@ const lexicalState = parser(document);
 
 ## Lexical to HTML
 
-To convert raw Lexical state to HTML, Lexical editor requires DOM to be present on the `global` object.
+To convert raw Lexical state to HTML, Lexical editor requires DOM `document` to be present globally. In the browser, this means the `window` object, and in Node.js, this means the `global` object.
 
 ### Browser Usage
 
@@ -150,9 +150,9 @@ npm i jsdom
 yarn add jsdom
 ```
 
-Then use it to setup the environment:
+Then use it to set up the environment:
 
-```ts Setup the necessary DOM objects
+```ts Set up the necessary objects
 const dom = new jsdom.JSDOM();
 global.window = dom.window;
 global.document = dom.window.document;
