fix: improve description of the global object

--- a/docs/developer-docs/5.38.x/core-development-concepts/extending-and-customizing/lexical-tools.mdx
+++ b/docs/developer-docs/5.38.x/core-development-concepts/extending-and-customizing/lexical-tools.mdx
@@ -132,7 +132,7 @@ const lexicalState = parser(document);
 
 ## Lexical to HTML
 
-To convert raw Lexical state to HTML, Lexical editor requires DOM `document` to be present globally. In the browser, this means the `window` object, and in Node.js, this means the `global` object.
+To convert raw Lexical state to HTML, Lexical editor requires DOM `document` to be present globally. In the browser, this means on the `window` object (`window.document`), and in Node.js, this means on the `global` object (`global.document`).
 
 ### Browser Usage
 
