feat: create 5.39.2 release notes

--- a/docs/release-notes/5.39.2/changelog.mdx
+++ b/docs/release-notes/5.39.2/changelog.mdx
@@ -6,14 +6,46 @@ description: See what's new in Webiny version 5.39.2.
 
 <GithubRelease version={"5.39.2"} />
 
-## Folder Level Permissions (FLP)
-
-### Xyz ([#3866](https://github.com/webiny/webiny-js/pull/3866))
-
-✍️
-
 ## Headless CMS
 
-### Xyz ([#3866](https://github.com/webiny/webiny-js/pull/3866))
+### Add Ability to Immediately Publish Entries When Using createEntryRevisionFrom Method ([#3894](https://github.com/webiny/webiny-js/pull/3894))
 
 ✍️
+
+### Content Models Defined Via Code - Ability to Disable Authorization ([#3865](https://github.com/webiny/webiny-js/pull/3865))
+
+✍️
+
+### New `AccessCont for checking base permissions (resolved multiple bugs) ([#3865](https://github.com/webiny/webiny-js/pull/3865))
+
+✍️
+
+### Addressing Invalid `TYPE` Field Value ([#3893](https://github.com/webiny/webiny-js/pull/3893))
+
+We've addressed an issue where, for one or more CMS content entries, their internal `TYPE` field value was not being set correctly. Although this issue wasn't causing any problems while using Webiny, for some users that are using the [Amazon DynamoDB + Amazon ElasticSearch database setup](/docs/5.38.x/architecture/introduction#different-database-setups), it did cause an issue when running the 5.39.0 data migration. This issue has been resolved. 
+
+#### Data Migrations
+
+Note that, with this release, the new `5.39.2-001` data migration has been introduced, which fixes the `TYPE` field value for all existing entries and again tries to perform [the meta fields data migration](/docs/release-notes/5.39.0/date-time-and-identity-meta-fields#data-migration) on entries that weren't migrated with the initial data migration included with the 5.39.0 release.
+
+## Folder Level Permissions (FLP)
+
+### Optimizing Calc ([#3902](https://github.com/webiny/webiny-js/pull/3902))
+
+✍️
+
+### FLP - Ensure Permissions Are Correctly Propagated To Nested Folders ([#3890](https://github.com/webiny/webiny-js/pull/3890))
+
+✍️
+
+### FLP - Prioritize Full Access Permissions Over Custom Ones ([#3889](https://github.com/webiny/webiny-js/pull/3889))
+
+✍️
+
+
+
+
+
+
+
+
