chore: add PR 3892 to the changelog

--- a/docs/release-notes/5.39.2/changelog.mdx
+++ b/docs/release-notes/5.39.2/changelog.mdx
@@ -22,7 +22,7 @@ description: See what's new in Webiny version 5.39.2.
 
 ### Addressing Invalid `TYPE` Field Value ([#3893](https://github.com/webiny/webiny-js/pull/3893))
 
-We've addressed an issue where, for one or more CMS content entries, their internal `TYPE` field value was not being set correctly. Although this issue wasn't causing any problems while using Webiny, for some users that are using the [Amazon DynamoDB + Amazon ElasticSearch database setup](/docs/5.38.x/architecture/introduction#different-database-setups), it did cause an issue when running the 5.39.0 data migration. This issue has been resolved. 
+We've addressed an issue where, for one or more CMS content entries, their internal `TYPE` field value was not being set correctly. Although this issue wasn't causing any problems while using Webiny, for some users that are using the [Amazon DynamoDB + Amazon ElasticSearch database setup](/docs/5.38.x/architecture/introduction#different-database-setups), it did cause an issue when running the 5.39.0 data migration. This issue has been resolved.
 
 #### Data Migrations
 
@@ -42,10 +42,10 @@ Note that, with this release, the new `5.39.2-001` data migration has been intro
 
 ✍️
 
+## Page Builder
 
+### Fix Last Used Tab State ([#3892](https://github.com/webiny/webiny-js/pull/3892))
 
+In the Page Builder sidebar, when the element is activated, there are 2 tabs available to the user: **Style** and **Element**. The system keeps track of the tab that was last used via the browser's local storage, and activates that tab when the user switches between the elements. However, there was an edge case which would reset the tab to the first one, and reset the value in the local storage.
 
-
-
-
-
+This edge case was caused by the `Tabs` component in our `@webiny/ui` package, where we had a few methods exposed via the [imperative API](https://react.dev/reference/react/useImperativeHandle), which would cause an uncontrollable sequence of callbacks to execute. With this PR, the imperative API was removed from the Tabs component. All the existing usages of the imperative API (via `ref`) were refactored to use simple components props.
