docs: replace the  with  as from 5.35.0 onward we are supporting

--- a/docs/developer-docs/5.35.x/headless-cms/extending/extend-graphql-api.mdx
+++ b/docs/developer-docs/5.35.x/headless-cms/extending/extend-graphql-api.mdx
@@ -39,7 +39,7 @@ import { CmsGraphQLSchemaPlugin } from "@webiny/api-headless-cms";
 import { CmsContentEntry, CmsContentEntryMeta } from "@webiny/api-headless-cms/types";
 import { ListResponse } from "@webiny/handler-graphql";
 
-// Make sure to import the `Context` interface and pass it to the `GraphQLSchemaPlugin`
+// Make sure to import the `Context` interface and pass it to the `CmsGraphQLSchemaPlugin`
 // plugin. Apart from making your application code type-safe, it will also make the
 // interaction with the `context` object significantly easier.
 import { Context } from "~/types";
