docs: updated the package location for CmsGraphQLSchemaPlugin in docs

--- a/docs/developer-docs/5.35.x/core-development-concepts/extending-and-customizing/extend-graphql-api.mdx
+++ b/docs/developer-docs/5.35.x/core-development-concepts/extending-and-customizing/extend-graphql-api.mdx
@@ -61,7 +61,7 @@ The plugin is registered within your GraphQL API's application code. For example
 
 <Alert type="info">
 
-The [`CmsGraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.35.0/packages/api-headless-cms/src/plugins/CmsGraphQLSchemaPlugin.ts) plugin is part of the [`@webiny/handler-graphql`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/handler-graphql) package, which can also be used to create new standalone GraphQL APIs.
+The [`CmsGraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.35.0/packages/api-headless-cms/src/plugins/CmsGraphQLSchemaPlugin.ts) plugin is part of the [`@webiny/api-headless-cms`](https://github.com/webiny/webiny-js/tree/v5.35.0/packages/api-headless-cms) package, which can also be used to create new standalone GraphQL APIs.
 
 </Alert>
 
