feat: create 5.39.2 release notes

--- a/docs/release-notes/5.39.2/changelog.mdx
+++ b/docs/release-notes/5.39.2/changelog.mdx
@@ -8,15 +8,54 @@ description: See what's new in Webiny version 5.39.2.
 
 ## Headless CMS
 
-### Add Ability to Immediately Publish Entries When Using createEntryRevisionFrom Method ([#3894](https://github.com/webiny/webiny-js/pull/3894))
+### Ability to Immediately Publish Entries When Using `createEntryRevisionFrom` Method ([#3894](https://github.com/webiny/webiny-js/pull/3894))
 
-✍️
+With the 5.39.0 release, we've improved the existing `create{MODEL_NAME}` GraphQL mutation that's used for creating new content entries. More specifically, we've introduced the ability to create and immediately publish a content entry. For example:
+
+```graphql
+mutation {
+  createVideo(
+    data: {
+      status: "published"
+      title: "Test"
+      description: "Test description."
+    }
+  ) {
+    data {
+      id
+      title
+      description
+    }
+  }
+}
+```
+
+With this release, we've added the same ability to the `createEntryRevisionFrom` mutation, which is used for creating new revisions of existing content entries. For example:
+
+```graphql
+mutation {
+  createVideoRevisionFrom(
+    revision: "5f9e3e3e3e3e3e3e3e3e3e3e"
+    data: {
+      status: "published"
+      title: "Test"
+      description: "Test description."
+    }
+  ) {
+    data {
+      id
+      title
+      description
+    }
+  }
+}
+```
 
 ### Content Models Defined Via Code - Ability to Disable Authorization ([#3865](https://github.com/webiny/webiny-js/pull/3865))
 
 ✍️
 
-### New `AccessCont for checking base permissions (resolved multiple bugs) ([#3865](https://github.com/webiny/webiny-js/pull/3865))
+### New `AccessCont for checking base permissions ([#3865](https://github.com/webiny/webiny-js/pull/3865))
 
 ✍️
 
@@ -26,7 +65,7 @@ We've addressed an issue where, for one or more CMS content entries, their inter
 
 #### Data Migrations
 
-Note that, with this release, the new `5.39.2-001` data migration has been introduced, which fixes the `TYPE` field value for all existing entries and again tries to perform [the meta fields data migration](/docs/release-notes/5.39.0/date-time-and-identity-meta-fields#data-migration) on entries that weren't migrated with the initial data migration included with the 5.39.0 release.
+Note that, with this release, the new `5.39.2-001` data migration has been introduced, which fixes the `TYPE` field value for all existing content entries and again tries to perform [the meta fields data migration](/docs/release-notes/5.39.0/date-time-and-identity-meta-fields#data-migration) on entries that weren't migrated with the initial `5.39.0-001` data migration included with the 5.39.0 release.
 
 ## Folder Level Permissions (FLP)
 
