feat: create 5.39.2 release notes

--- a/docs/developer-docs/5.39.x/infrastructure/basics/modify-cloud-infrastructure.mdx
+++ b/docs/developer-docs/5.39.x/infrastructure/basics/modify-cloud-infrastructure.mdx
@@ -440,7 +440,15 @@ Note that the configuration must be applied within both `webiny.application.ts` 
 yarn webiny deploy core,api --env dev
 ```
 
-Furthermore, note that, upon passing a shared Amazon OpenSearch Service domain, via the `indexPrefix` property, we can define the prefix that will be used with names of all OpenSearch indexes](https://opensearch.org/docs/latest/im-plugin/) for the given environment. This is important because it allows us to have a single Amazon OpenSearch Service domain, but also have separate indexes for each environment. Without this, all environments would share the same indexes, which is not what we want because it would cause data from one environment to be visible in another.
+Furthermore, note that, upon passing a shared Amazon OpenSearch Service domain, via the `indexPrefix` property, we can define the prefix that will be used with names of all OpenSearch [indexes](https://opensearch.org/docs/latest/im-plugin/) for the given environment. This is important because it allows us to have a single Amazon OpenSearch Service domain, but also have separate indexes for each environment. Without this, all environments would share the same indexes, which is not what we want because it would cause data from one environment to be visible in another.
+
+Finally, note that the sharing of Amazon OpenSearch Service domains is only recommended for development purposes. For production, it's recommended to have a separate Amazon OpenSearch Service domain for each environment.
+
+##### Cross-AWS Account Amazon OpenSearch Service Domain Sharing
+
+The above example demonstrates how to share an Amazon OpenSearch Service domain across multiple environments within the same AWS account. However, in some cases, we may need to share an Amazon OpenSearch Service domain across multiple AWS accounts.
+
+Unfortunately, at this time, we weren't able to provide full instructions on how to achieve this. If this is something you need, please reach out via our [Community Slack](https://www.webiny.com/slack) channel, and we'll be happy to help you out.
 
 ### Other
 
